Fixed cropped text in track title

--- a/app/assets/stylesheets/components/_track.sass
+++ b/app/assets/stylesheets/components/_track.sass
@@ -55,6 +55,7 @@
     word-break: break-all
 
   &--big &__title, &--big &__meta
+    padding-bottom: .05em
     text-overflow: ellipsis
     white-space: nowrap
     word-break: none
